@@ -16,6 +16,9 @@ geometry=725x545
 # If you have a lot of memory and a slow CPU, use YES, otherwise use NO
 use_dicache=NO
 
+# Uncomment if you want to have text-only browsing from the start.
+# (there's a toggle button near the bug meter to change this on-the-fly)
+#load_images=NO
 
 #-------------------------------------------------------------------------
 #                           RENDERING SECTION
